# difficalcy-performanceplus

./: .dockerignore  .gitignore  .gitmodules  Directory.Build.props  Dockerfile  Makefile  README.md  compose.override.e2e.yaml  compose.override.publish.yaml  compose.tooling.yaml  compose.yaml  difficalcy-performanceplus.sln  docker-compose.override.yml  docker-compose.tooling.yml  docker-compose.yml  renovate.json  tooling.Dockerfile
.config/: dotnet-tools.json
.github/: dependabot.yml
.github/workflows/: create-new-release.yml  deploy-docs.yml  test-on-push.yml  test.yml
Difficalcy.Osu/: Difficalcy.Osu.csproj  Program.cs  Startup.cs
Difficalcy.Osu.Tests/: Difficalcy.Osu.Tests.csproj  OsuCalculatorServiceTest.cs
Difficalcy.Osu/Controllers/: OsuCalculatorController.cs
Difficalcy.Osu/Models/: OsuCalculation.cs  OsuDifficulty.cs  OsuPerformance.cs  OsuScore.cs
Difficalcy.Osu/Properties/: launchSettings.json
Difficalcy.Osu/Services/: CalculatorWorkingBeatmap.cs  OsuCalculatorService.cs
Difficalcy.PerformancePlus/: Difficalcy.PerformancePlus.csproj  Program.cs  Startup.cs
Difficalcy.PerformancePlus.Api/: Difficalcy.PerformancePlus.Api.csproj  Program.cs
Difficalcy.PerformancePlus.Tests/: Difficalcy.PerformancePlus.Tests.csproj  OsuCalculatorServiceTest.cs
difficalcy/Difficalcy/: Difficalcy.csproj
docs/: Dockerfile  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: api-reference.md  difficalcy-performanceplus.json  index.md
docs/docs/css/: mkdocsoad.css
e2e/: Dockerfile  test
scripts/: check-api-reference.sh  update-api-reference.sh
(+13 files in other folders)
