[tool.poetry]
name = "difficalcy-performanceplus-docs"
description = ""
authors = ["Samuel Cattini-Schultz <syriiins@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.48"
neoteroi-mkdocs = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
